--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  scroll-behavior: smooth;
+}
+
+.container {
+  width: 100vw;
+  height: 100vh;
+  background: #cecece;
+  
+}
+
+.containerdark {
+  background: #111;
+}
+
+h2{
+  font-family: 'Source Serif Pro', serif;
+  font-size: 3rem;
+  font-weight: 600;
+  margin-bottom: 10px;
+  transition: 0.5s;
+}
+
+.containerdark h2{
+  font-family: 'Source Serif Pro', serif;
+  font-size: 3rem;
+  font-weight: 600;
+  color: white;
+  margin-bottom: 10px;
 }
